Fixed hero imago on mobile by adding style via Media Query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,28 +429,39 @@ textarea {
          width: 90%;
      }
     .navbar-brand {
-    font-family: "Eagle Lake", sans-serif;
-    font-size: 3rem;
-    line-height: 4rem;
-    float: left;
-    margin: 0;
-    padding: 0 1rem 0 0;
-}
+        font-family: "Eagle Lake", sans-serif;
+        font-size: 3rem;
+        line-height: 4rem;
+        float: left;
+        margin: 0;
+        padding: 0 1rem 0 0;
+    }
 
-.navbar-nav {
-    line-height: 4rem;
-    font-family: "Fanwood Text", sans-serif;
-    font-size: 1.5rem;
-    padding:0;
+    .navbar-nav {
+        line-height: 4rem;
+        font-family: "Fanwood Text", sans-serif;
+        font-size: 1.5rem;
+        padding:0;
+    }  
+
+
+    #hero-image {
+        background: url('../images/nature-image.jpg')no-repeat center bottom fixed; 
+        background-size: contain;
+        height: 80vh;
+        padding: 0;
+        -webkit-background-size: contain;
+        -moz-background-size: contain;
+        -o-background-size: contain;
+    }
+    .social-links a {
+    font-size: 4rem;
+    padding: 2rem;
+    }
 }
-     }
 
 @media (min-width: 576px) {
 .navbar-expand-sm .navbar-collapse {
     display: block;
-}
-.social-links a {
-    font-size: 4rem;
-    padding: 2rem;
 }
 }
